--- a/Terraform/environment.yml
+++ b/Terraform/environment.yml
@@ -26,7 +26,7 @@ variables:
   TF_IN_AUTOMATION: true
   TF_INPUT: false
   TF_BACKEND_BUCKET: ${{ parameters.AWS_ACCOUNT }}-state
-  TF_BACKEND_KEY: ${{ parameters.repoName }}.tfstate
+  TF_BACKEND_KEY: ${{ parameters.repoName }}-iam.tfstate
   TF_PATH: ${{ parameters.sourcesDirectory }}/terraform
   TF_VAR_AWS_ACCOUNT: ${{ parameters.AWS_ACCOUNT }}
   TF_VAR_AWS_REGION: ${{ parameters.AWS_REGION }}
