--- a/Terraform/environment.yml
+++ b/Terraform/environment.yml
@@ -26,11 +26,11 @@ variables:
   TF_IN_AUTOMATION: true
   TF_INPUT: false
   TF_BACKEND_BUCKET: ${{ parameters.AWS_ACCOUNT }}-state
-  TF_BACKEND_KEY: ${{ parameters.repoName }}-iam.tfstate
+  TF_BACKEND_KEY: ${{ parameters.repoName }}.tfstate
   TF_PATH: ${{ parameters.sourcesDirectory }}/terraform
   TF_VAR_AWS_ACCOUNT: ${{ parameters.AWS_ACCOUNT }}
   TF_VAR_AWS_REGION: ${{ parameters.AWS_REGION }}
-  TF_VAR_AWS_ROLE_ARN: arn:aws:iam::${{ parameters.AWS_ACCOUNT }}:role/$(CICD_ROLE_NAME)
+  TF_VAR_AWS_ROLE_ARN: arn:aws:iam::${{ parameters.AWS_ACCOUNT }}:role/wsl_role_deploy_Infrastructure
   TF_VAR_ENVIRONMENT: ${{ parameters.ENVIRONMENT_NAME }}
   TF_VAR_PROJECT: ${{ variables['System.TeamProject'] }}
   TF_VAR_UPDATED_BY: ${{ variables['Build.RequestedForEmail'] }}
