--- a/LambdaService/build.yml
+++ b/LambdaService/build.yml
@@ -1,31 +1,29 @@
-parameters:
-- name: sources
-  type: object
-
 steps:
-- ${{ each lambdaName in parameters.sources }}:
-  - task: Cache@2
-    displayName: Cache ${{ lambdaName }} Prod Dependencies
-    inputs:
-      key: npm | prod | "$(Agent.OS)" | lambdas/${{ lambdaName }}/package.json
-      path: lambdas/${{ lambdaName }}/node_modules
-      cacheHitVar: CACHE_RESTORED
-      restoreKeys: npm | prod | $(Agent.OS)
+- task: Cache@2
+  displayName: Cache Prod Dependencies
+  inputs:
+    key: npm | prod | "$(Agent.OS)" | lambdas/**/package.json
+    path: lambdas
+    cacheHitVar: CACHE_RESTORED
+    restoreKeys: npm | prod | $(Agent.OS)
 
-  - script: npm install --only=prod
-    displayName: Install ${{ lambdaName }} Production Dependencies
-    condition: ne(variables.CACHE_RESTORED, 'true')
-    workingDirectory: lambdas/${{ lambdaName }}
+- script: |
+    for dir in ./*
+      do (cd "$dir" && npm install --only=prod)
+    done
+  displayName: Install Production Dependencies
+  condition: ne(variables.CACHE_RESTORED, 'true')
+  workingDirectory: lambdas
 
-  - task: ArchiveFiles@2
-    displayName: Zip ${{ lambdaName }} Lambda
-    inputs:
-      rootFolderOrFile: lambdas/${{ lambdaName }}
-      includeRootFolder: false
-      archiveType: zip
-      archiveFile: $(Build.ArtifactStagingDirectory)/${{ lambdaName }}.zip
-      replaceExistingArchive: true
+# - task: ArchiveFiles@2
+#   displayName: Zip ${{ lambdaName }} Lambda
+#   inputs:
+#     rootFolderOrFile: lambdas/${{ lambdaName }}
+#     includeRootFolder: false
+#     archiveType: zip
+#     archiveFile: $(Build.ArtifactStagingDirectory)/${{ lambdaName }}.zip
+#     replaceExistingArchive: true
 
-  - publish: $(Build.ArtifactStagingDirectory)/${{ lambdaName }}.zip
-    artifact: ${{ lambdaName }}
-    displayName: Publish ${{ lambdaName }} Artifact
+# - publish: $(Build.ArtifactStagingDirectory)/${{ lambdaName }}.zip
+#   artifact: ${{ lambdaName }}
+#   displayName: Publish ${{ lambdaName }} Artifact
