--- a/LambdaService/build.yml
+++ b/LambdaService/build.yml
@@ -9,7 +9,7 @@ steps:
 
 - script: |
     for dir in *
-      do (cd "$dir" && npm install --only=prod && zip -r "${stagingDir}/${dir}.zip .")
+      do (cd "$dir" && npm install --only=prod && zip -r "${stagingDir}/${dir}.zip" .)
     done
   displayName: Install Production Dependencies
   condition: ne(variables.CACHE_RESTORED, 'true')
