--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -1,9 +1,15 @@
+parameters:
+- name: useTerraform
+  type: string
+  
 jobs:
 - job: TerraformPlan
   displayName: Terraform Plan
   condition: or(eq(variables.ENVIRONMENT_NAME, 'DEV'), eq(variables.ENVIRONMENT_NAME, 'QA'))
   steps:
   - template: init.yml
+    parameters:
+      useTerraform: ${{ parameters.useTerraform }}
 
   - task: TerraformTaskV1@0
     displayName: Plan Terraform
