skip build stage

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -69,7 +69,7 @@ stages:
         steps:
         - template: ${{ parameters.deployType }}/validate.yml
 
-- ${{ if or(ne(parameters.deployType, 'null'), ne(parameters.deployType, 'ADO')) }}:
+- ${{ if and(ne(parameters.deployType, 'null'), ne(parameters.deployType, 'ADO')) }}:
   - stage: Build
     ${{ if in(parameters.deployType, 'LambdaService') }}:
       # Build once, deploy anywhere
