--- a/Terraform/init.yml
+++ b/Terraform/init.yml
@@ -5,7 +5,7 @@ parameters:
 steps:
 - ${{ if ne(parameters.useTerraform, false) }}:
   # get the version from the useTerraform param if set
-  - ${{ if ne(parameters.useTerraform, true)) }}:
+  - ${{ if ne(parameters.useTerraform, true) }}:
     - script: echo "##vso[task.setvariable variable=tfVersion;isOutput=true]${TF_VERSION}"
       displayName: Get Terraform Version
       name: GetImage
@@ -13,7 +13,7 @@ steps:
         TF_VERSION: ${{ parameters.useTerraform }}
 
   # otherwise match the version from tfplan (if available)
-  - ${{ if eq(parameters.useTerraform, true)) }}:
+  - ${{ if eq(parameters.useTerraform, true) }}:
     - script: echo "##vso[task.setvariable variable=tfVersion;isOutput=true]$(jq -er '.terraform_version' tf-plan.json)"
       displayName: Get Terraform Version
       name: GetTFVersion
