--- a/Terraform/init.yml
+++ b/Terraform/init.yml
@@ -14,7 +14,7 @@ steps:
 
   # otherwise match the version from tfplan (if available)
   - ${{ if eq(parameters.useTerraform, true) }}:
-    - script: echo "##vso[task.setvariable variable=tfVersion;isOutput=true]$(jq -er '.terraform_version' tf-plan.json)"
+    - script: echo "##vso[task.setvariable variable=tfVersion;isOutput=true]$(jq -er '.terraform_version' tfplan.json)"
       displayName: Get Terraform Version
       name: GetTFVersion
       condition: eq(variables['System.StageName'], 'Deploy')
