--- a/Terraform/init.yml
+++ b/Terraform/init.yml
@@ -6,15 +6,15 @@ steps:
 - ${{ if ne(parameters.useTerraform, false) }}:
   # get the version from the useTerraform param if set
   - ${{ if ne(parameters.useTerraform, true) }}:
-    - script: echo "##vso[task.setvariable variable=tfVersion;isOutput=true]${TF_VERSION}"
+    - script: echo "##vso[task.setvariable variable=version;isOutput=true]${TF_VERSION}"
       displayName: Get Terraform Version
-      name: GetImage
+      name: GetTFVersion
       env: 
         TF_VERSION: ${{ parameters.useTerraform }}
 
   # otherwise match the version from tfplan (if available)
   - ${{ if eq(parameters.useTerraform, true) }}:
-    - script: echo "##vso[task.setvariable variable=tfVersion;isOutput=true]$(jq -er '.terraform_version' tfplan.json)"
+    - script: echo "##vso[task.setvariable variable=version;isOutput=true]$(jq -er '.terraform_version' tfplan.json)"
       displayName: Get Terraform Version
       name: GetTFVersion
       condition: eq(variables['System.StageName'], 'Deploy')
@@ -23,9 +23,9 @@ steps:
   # fallback to the pre-installed version of a different version not found above
   - task: TerraformInstaller@0
     displayName: Install Terraform
-    condition: ne(variables.tfVersion, '')
+    condition: ne(variables['GetTFVersion.version'], '')
     inputs:
-      terraformVersion: $(tfVersion)
+      terraformVersion: $(GetTFVersion.version)
 
 - task: TerraformTaskV1@0
   displayName: Initialise Terraform
