--- a/Terraform/init.yml
+++ b/Terraform/init.yml
@@ -16,8 +16,11 @@ steps:
   - ${{ if eq(parameters.useTerraform, true) }}:
     - script: |
         targetVersion=$(jq -er '.terraform_version' tfplan.json)
+        echo "target version: $targetVersion"
         currentVersion=$(terraform version)
+        echo "current version: $currentVersion"
         if [ "$targetVersion" != "$currentVersion" ]; then
+          echo "setting desired Terraform version to $targetVersion"
           echo "##vso[task.setvariable variable=version;isOutput=true]${targetVersion}"
         fi
       displayName: Get Terraform Version
