--- a/Terraform/init.yml
+++ b/Terraform/init.yml
@@ -28,7 +28,7 @@ steps:
       condition: eq(variables['System.StageName'], 'Deploy')
       workingDirectory: $(Pipeline.Workspace)/tfplan-$(ENVIRONMENT_NAME)
 
-  # fallback to the pre-installed version of a different version not found above
+  # fallback to the pre-installed version if a different version not found above
   - task: TerraformInstaller@0
     displayName: Install Terraform
     condition: ne(variables['GetTFVersion.version'], '')
