--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -70,6 +70,9 @@ stages:
 
 - ${{ if and(ne(parameters.deployType, 'null'), ne(parameters.deployType, 'ADO')) }}:
   - stage: Build
+    ${{ if in(parameters.deployType, 'LambdaService') }}:
+    # Build once, deploy anywhere
+      condition: eq(variables.ENVIRONMENT_NAME, 'DEV')
     dependsOn:
     - Validate
     - ${{ if and(ne(parameters.deployType, 'null'), ne(parameters.useContainerImage, false)) }}: 
@@ -88,9 +91,10 @@ stages:
 - stage: Deploy
   dependsOn:
   - Validate
-  - Build
   - ${{ if and(ne(parameters.deployType, 'null'), ne(parameters.useContainerImage, false)) }}: 
     - Initialise
+  - ${{ if in(parameters.deployType, 'LambdaService') }}:
+    - Build
   jobs:
   - ${{ if ne(parameters.useTerraform, false) }}:
     - template: Terraform/deploy.yml
