--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -74,7 +74,7 @@ stages:
     - Validate
     - ${{ if in(parameters.deployType, 'ReactApp') }}:
       # Build for each environment, depending on infrastructure
-      - Deploy
+      - Provision
     jobs:
     - template: helpers/container-job.yml
       parameters: 
