--- a/helpers/container-job.yml
+++ b/helpers/container-job.yml
@@ -14,6 +14,18 @@ parameters:
   type: stepList
 
 jobs:
+- job: Debug
+  dependsOn: ${{ parameters.dependsOn }}
+  condition: ${{ parameters.condition }}
+  variables:
+    taskDepends: $[dependencies.GetContainerImage.outputs['GetImage.url']]
+    stageDepends: $[stageDependencies.Validate.GetContainerImage.outputs['GetImage.url']]
+    CONTAINER_IMAGE: coalesce($[dependencies.GetContainerImage.outputs['GetImage.url']], $[stageDependencies.Validate.GetContainerImage.outputs['GetImage.url']], '')
+  steps:
+  - script: echo $taskDepends
+  - script: echo $stageDepends
+  - script: echo $CONTAINER_IMAGE
+
 - job: ${{ parameters.job }}
   ${{ if ne(parameters.displayName, '') }}:
     displayName: ${{ parameters.displayName }}
