--- a/helpers/container-job.yml
+++ b/helpers/container-job.yml
@@ -15,16 +15,16 @@ parameters:
 
 jobs:
 - job: Debug
-  dependsOn: ${{ parameters.dependsOn }}
+  dependsOn: GetContainerImage
   condition: ${{ parameters.condition }}
   variables:
-    taskDepends: $[dependencies.GetContainerImage.outputs['GetImage.url']]
-    stageDepends: $[stageDependencies.Validate.GetContainerImage.outputs['GetImage.url']]
-    CONTAINER_IMAGE: coalesce($[dependencies.GetContainerImage.outputs['GetImage.url']], $[stageDependencies.Validate.GetContainerImage.outputs['GetImage.url']], '')
+    taskDepends: $[ dependencies.GetContainerImage.outputs['GetImage.url'] ]
+    stageDepends: $[ stageDependencies.Validate.GetContainerImage.outputs['GetImage.url'] ]
+    CONTAINER_IMAGE: $[ coalesce(dependencies.GetContainerImage.outputs['GetImage.url'], stageDependencies.Validate.GetContainerImage.outputs['GetImage.url'], '') ]
   steps:
-  - script: echo $taskDepends
-  - script: echo $stageDepends
-  - script: echo $CONTAINER_IMAGE
+  - script: echo $(taskDepends)
+  - script: echo $(stageDepends)
+  - script: echo $(CONTAINER_IMAGE)
 
 - job: ${{ parameters.job }}
   ${{ if ne(parameters.displayName, '') }}:
