--- a/helpers/container-job.yml
+++ b/helpers/container-job.yml
@@ -15,7 +15,7 @@ parameters:
 
 jobs:
 - job: Debug
-  dependsOn: GetContainerImage
+  dependsOn: ${{ parameters.dependsOn }}
   condition: ${{ parameters.condition }}
   variables:
     taskDepends: $[ dependencies.GetContainerImage.outputs['GetImage.url'] ]
