--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -29,7 +29,8 @@ jobs:
 
   - script: |
       isTerraformRequired=$(jq -er '.resource_changes | map(.change.actions) | flatten | map(select(. != "no-op")) | length | . > 0' $tfjson)
-      echo $isTerraformRequired
+      echo "##vso[task.setvariable variable=isRequired;isOutput=true]${isTerraformRequired}"
+    name: TerraformCondition
     displayName: Set Terraform Condition
     env:
       tfjson: $(TerraformPlan.jsonPlanFilePath)
